WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280614
REGRESSION(
284376@main)[WPE
]: Build broken with GCC and ARM64
https://bugs.webkit.org/show_bug.cgi?id=280614
Summary
REGRESSION(284376@main)[WPE]: Build broken with GCC and ARM64
Carlos Alberto Lopez Perez
Reported
2024-09-30 07:09:12 PDT
Since
r284376
@main landed the bot WPE-Linux-RPi4-64bits-Mesa-Release-Perf-Build is failing the build with: FAILED: Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/__/__/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-ee8a7a7a-6.cpp.o [...] In file included from /home/buildbot/worker/WPE-Linux-RPi4-64bits-Mesa-Release-Perf-Build/build/WebKitBuild/WPE/Release_rpi4-64bits-mesa/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-ee8a7a7a-6.cpp:4: /home/buildbot/worker/WPE-Linux-RPi4-64bits-Mesa-Release-Perf-Build/build/Source/JavaScriptCore/heap/MarkedBlock.cpp: In member function ‘void JSC::MarkedBlock::dumpInfoAndCrashForInvalidHandle(WTF::AbstractLocker&, JSC::HeapCell*)’: /home/buildbot/worker/WPE-Linux-RPi4-64bits-Mesa-Release-Perf-Build/build/Source/JavaScriptCore/heap/MarkedBlock.cpp:583:32: error: address of explicit register variable ‘savedActualVM’ requested 583 | VMInspector::forEachVM([&](VM& vm) { | ^~~~~~~~~~~~~ 584 | if (blockVM == &vm) { | ~~~~~~~~~~~~~~~~~~~~~ 585 | isValidBlockVM = true; | ~~~~~~~~~~~~~~~~~~~~~~ 586 | SAVE_TO_REG(savedActualVM, &vm); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 587 | SAVE_TO_REG(savedBitfield, 8); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 588 | LOG_INVALID_HANDLE_DETAILS("block VM %p is valid\n", &vm); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 589 | return IterationStatus::Done; | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 590 | } | ~ 591 | return IterationStatus::Continue; | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 592 | }); | ~ /home/buildbot/worker/WPE-Linux-RPi4-64bits-Mesa-Release-Perf-Build/build/Source/JavaScriptCore/heap/MarkedBlock.cpp:619:32: error: address of explicit register variable ‘savedActualVM’ requested 619 | VMInspector::forEachVM([&](VM& vm) { | ^~~~~~~~~~~~~ 620 | MarkedSpace& objectSpace = vm.heap.objectSpace(); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 621 | isBlockInVM = objectSpace.blocks().set().contains(this); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 622 | isBlockHandleInVM = !!objectSpace.findMarkedBlockHandleDebug(this); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 623 | // Either of them is true indicates that the block belongs or used to belong to the VM. | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 624 | if (isBlockInVM || isBlockHandleInVM) { | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 625 | actualVM = &vm; | ~~~~~~~~~~~~~~~ 626 | LOG_INVALID_HANDLE_DETAILS("block in another VM: %d, block in another VM: %d; other VM is %p\n", isBlockInVM, isBlockHandleInVM, &vm); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 627 | | 628 | SAVE_TO_REG(savedActualVM, actualVM); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 629 | SAVE_TO_REG(savedBitfield, (isValidBlockVM ? 8 : 0) | (isBlockInVM ? 4 : 0) | (isBlockHandleInVM ? 2 : 0) | (foundBlockInThisVM ? 1 : 0)); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 630 | | 631 | return IterationStatus::Done; | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 632 | } | ~ 633 | return IterationStatus::Continue; | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 634 | }); | ~ See:
https://build.webkit.org/#/builders/894/builds/15698
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2024-09-30 07:15:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34450
EWS
Comment 2
2024-09-30 12:08:13 PDT
Committed
284460@main
(964f4b1be9b5): <
https://commits.webkit.org/284460@main
> Reviewed commits have been landed. Closing PR #34450 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug